# files-ai

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
docs/: CONFIGURATION.md  FILE_WATCHING_AND_STABILITY.md
src/files_ai/: __init__.py  __main__.py  agent.py  area_agent.py  batch_reviewer.py  config.py  context.py  extract.py  folder_agent.py  johnny_decimal.py  logging.py  mover.py  store.py  tools.py  tree.py  watcher.py
src/files_ai/storage/: __init__.py  base.py  local.py  registry.py
tests/: test_agent.py  test_area_agent.py  test_batch_reviewer.py  test_context.py  test_extract.py  test_folder_agent.py  test_johnny_decimal.py  test_main_moderation.py  test_mover.py  test_tree.py  test_watcher.py
tests/integration/: test_file_type_extraction_live.py  test_once_mode.py
tests/storage/: test_local.py  test_protocol.py
