[project]
name = "files-ai"
version = "0.1.0"
description = "AI file organizer service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.26.0",
    "python-calamine>=0.5.4",
    "pypandoc>=1.15",
    "python-pptx>=1.0.0",
    "python-magic>=0.4.27",
    "pillow>=11.0.0",
    "structlog>=24.4.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.8.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[project.scripts]
files-ai = "files_ai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
